# data-engineer-interview

./: README.md  main.py  pyproject.toml
data_lake/curated/2023/05/: all_volunteering_data.csv
data_lake/raw/2023/05/: provider1_volunteering_data.csv  provider2_volunteering_data.csv  provider3_volunteering_data.csv
etl/: common.py  test_job.py
etl/volunteering/: aggregate_data.py
notebooks/: Volunteer Data Cleaning.ipynb
tests/unit/: test_common.py
